--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,4 +33,5 @@ flutter:
     - assets/images/add_icon.png
     - assets/images/back_arrow.png
     - assets/images/check_icon.png
+    - assets/images/delete_icon.png
  
